fixed carousel content jumping, input type for user password.  Logout causing error now.

--- a/src/main/resources/static/css/stl-parks.css
+++ b/src/main/resources/static/css/stl-parks.css
@@ -74,7 +74,7 @@ font-weight:bold;
 
 .amenity-list{
 display: inline-block;
-list-style-type: square;
+
 }
 
 .footer{
